add link to applications in table

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -43,6 +43,7 @@
 
                 <!-- Create a <td> element with the value of that key in it -->
 				<td> {{item[key]}} </td> 
+                <td><a href="applications">Applications</a></td>
             {% endfor %}
             </tr>
         {% endfor %}
