--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <h1>DreamOffer</h1>
 
     <span>Home</span> |
-    <a href="applicants_crud.html">Applicants</a> |
+    <a href="applicants">Applicants</a> |
     <a href="applications_crud.html">Applications</a> |
     <a href="companies_crud.html">Companies</a> |
     <a href="positionscompanyrecruiters_crud.html">Positions & Company Recruiters</a>
