fix link to home page from applicants page

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -11,7 +11,7 @@
 <body>
     <h1>Applicants</h1>
     
-    <a href="home">Home |
+    <a href="/">Home |
     <span>Applicants</span> |
     <a href="applications">Applications</a> |
     <a href="companies">Companies</a> |
