add div for edit form

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -34,7 +34,7 @@
         }
 
         function updateApplicant(id) {
-            showForm('update');
+            showForm('edit');
         }
 
         function deleteApplicant(id) {
@@ -93,6 +93,7 @@
         </table>
         <p>&nbsp;</p>
     </div>
+    <!-- END BROWSE -->
 
 
     <!-- INSERT -->
@@ -115,6 +116,11 @@
         </form>
     </div>
     <!-- END INSERT -->
+
+    <!-- EDIT -->
+    <div id='edit'>
+    </div>
+    <!-- END EDIT -->
 
 </body>
 </html>
