--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -119,6 +119,42 @@
 
     <!-- EDIT -->
     <div id='edit'>
+        <!-- form to UPDATE an Applicant -->
+        <form id="editApplicant" action="/edit_applicant/{{data[0].applicantID}}" method="post">
+            <legend><strong>Update Applicant</strong></legend>
+            <fieldset>
+                <label>ID: <span>{{data[0].applicantID}}</span></label>
+                <label for="name">Name</label>
+                <input 
+                    type="text" 
+                    class="form-control" 
+                    id="name" 
+                    name="name" 
+                    value="{{data[0].name}}"
+                    pattern="[A-Za-z]{1,}"
+                    required
+                />
+                <label for="email">Email</label> 
+                <input 
+                    type="email" 
+                    class="form-control" 
+                    id="email" 
+                    name="email" 
+                    value="{{data[0].email}}"
+                    required
+                />
+            </fieldset>
+            <input 
+                type="submit" 
+                value="Update Applicant"
+                name="Edit_Applicant"
+                class="btn btn-primary" 
+                style="margin:.5rem;"
+            />
+            <a href='/applicants'>
+                <input class="btn" type="button" value="Cancel">
+            </a>
+        </form>
     </div>
     <!-- END EDIT -->
 
