change name of update submit input

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -147,7 +147,7 @@
             <input 
                 type="submit" 
                 value="Update Applicant"
-                name="Edit_Applicant"
+                name="Update_Applicant"
                 class="btn btn-primary" 
                 style="margin:.5rem;"
             />
