change showForm input from 'update' to 'edit'

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -11,7 +11,7 @@
                 document.getElementById('insert').style.display = 'block';
                 document.getElementById('edit').style.display = 'none';
                 document.getElementById('delete').style.display = 'none';
-            } else if (form == 'update') {
+            } else if (form == 'edit') {
                 document.getElementById('browse').style.display = 'none';
                 document.getElementById('insert').style.display = 'none';
                 document.getElementById('edit').style.display = 'block';
