--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -9,32 +9,20 @@
             if (form == 'insert') {
                 document.getElementById('browse').style.display = 'none';
                 document.getElementById('insert').style.display = 'block';
-                document.getElementById('edit').style.display = 'none';
-                document.getElementById('delete').style.display = 'none';
-            } else if (form == 'edit') {
-                document.getElementById('browse').style.display = 'none';
-                document.getElementById('insert').style.display = 'none';
-                document.getElementById('edit').style.display = 'block';
                 document.getElementById('delete').style.display = 'none';
             } else if (form == 'delete') {
                 document.getElementById('browse').style.display = 'none';
                 document.getElementById('insert').style.display = 'none';
-                document.getElementById('edit').style.display = 'none';
                 document.getElementById('delete').style.display = 'block';
             } else { // display browse by default
                 document.getElementById('browse').style.display = 'block';
                 document.getElementById('insert').style.display = 'none';
-                document.getElementById('edit').style.display = 'none';
                 document.getElementById('delete').style.display = 'none';
             }
         }
 
         function newApplicant() {
             showForm('insert');
-        }
-
-        function updateApplicant(id) {
-            showForm('edit');
         }
 
         function deleteApplicant(id) {
@@ -82,8 +70,16 @@
             {% for item in data %}
                 <tr>
                     <!-- Edit and Delete buttons for each item -->
-                    <td><a href="/edit-applicant/{{item.applicantID}}" class="edit-btn">Edit</a></td>
-                    <td><a href="/delete-applicant/{{item.applicantID}}" class="delete-btn">Delete</a></td>
+                    <td>
+                        <a href="/edit-applicant/{{item.applicantID}}" class="edit-btn">
+                            Edit
+                        </a>
+                    </td>
+                    <td>
+                        <a href="/delete-applicant/{{item.applicantID}}" class="delete-btn">
+                            Delete
+                        </a>
+                    </td>
                 {% for key in item.keys() %}
 
                     <!-- Create a <td> element with the value of that key in it -->
@@ -120,47 +116,6 @@
         </form>
     </div>
     <!-- END INSERT -->
-
-    <!-- EDIT -->
-    <div id='edit'>
-        <!-- form to UPDATE an Applicant -->
-        <form id="editApplicant" action="/edit_applicant/{{data[0].applicantID}}" method="post">
-            <legend><strong>Update Applicant</strong></legend>
-            <fieldset>
-                <label>ID: <span>{{data[0].applicantID}}</span></label>
-                <label for="name">Name</label>
-                <input 
-                    type="text" 
-                    class="form-control" 
-                    id="name" 
-                    name="name" 
-                    value="{{data[0].name}}"
-                    pattern="[A-Za-z]{1,}"
-                    required
-                />
-                <label for="email">Email</label> 
-                <input 
-                    type="email" 
-                    class="form-control" 
-                    id="email" 
-                    name="email" 
-                    value="{{data[0].email}}"
-                    required
-                />
-            </fieldset>
-            <input 
-                type="submit" 
-                value="Update Applicant"
-                name="Update_Applicant"
-                class="btn btn-primary" 
-                style="margin:.5rem;"
-            />
-            <a href='/applicants'>
-                <input class="btn" type="button" value="Cancel">
-            </a>
-        </form>
-    </div>
-    <!-- END EDIT -->
 
 </body>
 </html>
