make changes so edit form inputs work

--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -20,7 +20,7 @@
                     id="name" 
                     name="name" 
                     value="{{data[0].name}}"
-                    pattern="[A-Za-z]{1,}"
+                    pattern="^[A-Z][a-z]+\s[A-Z][a-z]+$"
                     required
                 />
                 <label for="email">Email</label> 
