--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -117,5 +117,32 @@
     </div>
     <!-- END INSERT -->
 
+    <!-- DELETE -->
+    <div id='delete'>
+    <!-- form for performing DELETE on an Applicant -->
+        <form id="deleteApplicant" action="/delete-applicant/{{data[0].applicantID}}">
+            <legend><strong>Delete Applicant</strong></legend>
+            <fieldset>
+                <p>Are you sure you want to delete the applicant?</p>
+                <div>
+                <label><strong>ID: </strong><span>{{data[0].applicantID}}</span></label>
+                <label><strong>Name: </strong><span>{{data[0].name}}</span></label>
+                </div>
+            </fieldset>
+            <input 
+                type="submit" 
+                value="Delete Applicant" 
+                name="Delete_Applicant" 
+                class="btn btn-primary" 
+                style="margin:.5rem;"
+            />
+            <button type="submit">Delete Applicant</button>
+            <a href='/applicants'>
+                <input class="btn" type="button" value="Cancel">
+            </a>
+        </form>
+    </div>
+    <!-- END DELETE -->
+
 </body>
 </html>
