--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -112,7 +112,9 @@
 
             <!-- Create 'Add Applicant' and 'Cancel' buttons -->
             <input type="submit" value="Add Applicant" name="Add_Applicant" class="btn btn-primary" style="margin:.5rem;">
-            <input class="btn" type="button" value="Cancel">
+            <a href='/applicants'>
+                <input class="btn" type="button" value="Cancel">
+            </a>
         </form>
     </div>
     <!-- END INSERT -->
