add citations to each file

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -1,5 +1,8 @@
 <html>
-<!-- Based on the Flask Starter App by Professor Michael Curry -->
+<!-- 
+    Based on the people.j2 file from the Flask Starter App repo by Professor Michael Curry
+    https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/people.j2
+-->
 <!-- Adapted from the applicants_crud.html UI design -->
 <head>
     <title>Applicants</title>
