--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -1,4 +1,8 @@
 <html>
+<!-- 
+    Based on the edit_people.j2 file from the Flask Starter App repo by Professor Michael Curry
+    https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2
+-->
 <head>
 	<title>Edit Applicant</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
