add and implement delete form functionality

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -107,7 +107,14 @@
             <fieldset>
                 <!-- placeholder shows ghost text, required forces an input, pattern forces input adherance -->
                 <label for="name">Name: </label>
-                <input type="text" class="form-control" id="name" name="name" pattern="[A-Za-z]{1,}" placeholder="" required>
+                <input 
+                    type="text" 
+                    class="form-control" 
+                    id="name" name="name" 
+                    pattern="^[A-Z][a-z]+\s[A-Z][a-z]+$" 
+                    placeholder="" 
+                    required
+                />
 
                 <label for="email">Email: </label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="" required>
@@ -121,33 +128,6 @@
         </form>
     </div>
     <!-- END INSERT -->
-
-    <!-- DELETE -->
-    <div id='delete'>
-    <!-- form for performing DELETE on an Applicant -->
-        <form id="deleteApplicant" action="/delete-applicant/{{data[0].applicantID}}">
-            <legend><strong>Delete Applicant</strong></legend>
-            <fieldset>
-                <p>Are you sure you want to delete the applicant?</p>
-                <div>
-                <label><strong>ID: </strong><span>{{data[0].applicantID}}</span></label>
-                <label><strong>Name: </strong><span>{{data[0].name}}</span></label>
-                </div>
-            </fieldset>
-            <input 
-                type="submit" 
-                value="Delete Applicant" 
-                name="Delete_Applicant" 
-                class="btn btn-primary" 
-                style="margin:.5rem;"
-            />
-            <button type="submit">Delete Applicant</button>
-            <a href='/applicants'>
-                <input class="btn" type="button" value="Cancel">
-            </a>
-        </form>
-    </div>
-    <!-- END DELETE -->
 
 </body>
 </html>
