--- a/templates/delete_applicant.j2
+++ b/templates/delete_applicant.j2
@@ -1,6 +1,9 @@
 <html>
 <!-- 
-    Based on the edit_people.j2 file from the Flask Starter App repo by Professor Michael Curry
+    Citation for the following file:
+    11/09/2022
+    Based on:
+    edit_people.j2 from the Flask Starter App repo by Professor Michael Curry
     https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2
 -->
 <head>
