--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -1,6 +1,9 @@
 <html>
 <!-- 
-    Based on the people.j2 file from the Flask Starter App repo by Professor Michael Curry
+    Citation for the following file:
+    11/07/2022
+    Based on:
+    people.j2 file from the Flask Starter App repo by Professor Michael Curry
     https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/people.j2
 -->
 <!-- Adapted from the applicants_crud.html UI design -->
