update stylesheet link

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -9,7 +9,7 @@
 <!-- Adapted from the applicants_crud.html UI design -->
 <head>
     <title>Applicants</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="../static/style.css" type="text/css">
     <script language="JavaScript" defer>
         function showForm(form) {
             if (form == 'insert') {
