--- a/templates/delete_applicant.j2
+++ b/templates/delete_applicant.j2
@@ -8,7 +8,7 @@
 -->
 <head>
 	<title>Delete Applicant</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
