--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -6,6 +6,12 @@
     people.j2 file from the Flask Starter App repo by Professor Michael Curry
     https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/people.j2
 -->
+<!--
+    Citation for regex in pattern attribute of INSERT form's text input for "name":
+    11/09/2022
+    Copied from:
+    https://stackoverflow.com/questions/26821463/regex-exact-match-first-and-last-name-with-one-space-between
+-->
 <!-- Adapted from the applicants_crud.html UI design -->
 <head>
     <title>Applicants</title>
