--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -6,6 +6,12 @@
     edit_people.j2 file from the Flask Starter App repo by Professor Michael Curry
     https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2
 -->
+<!--
+    Citation for regex in pattern attribute of EDIT form's text input for "name":
+    11/09/2022
+    Copied from:
+    https://stackoverflow.com/questions/26821463/regex-exact-match-first-and-last-name-with-one-space-between
+-->
 <head>
 	<title>Edit Applicant</title>
     <link href="../static/style.css" rel="stylesheet" type="text/css" />
