edit typo in insert form

--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -115,7 +115,7 @@
                     placeholder="" 
                 />
 
-                <label for="description">Description</label> 
+                <label for="description">Description: </label> 
                 <input 
                     type="text" 
                     class="form-control"
