--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <span>Home</span> |
     <a href="applicants">Applicants</a> |
     <a href="applications_crud.html">Applications</a> |
-    <a href="companies_crud.html">Companies</a> |
+    <a href="companies">Companies</a> |
     <a href="positionscompanyrecruiters_crud.html">Positions & Company Recruiters</a>
 
     <h2>Every offer starts as a dream.</h2>
