fix links to other pages

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -46,9 +46,9 @@
 
     <a href="/">Home</a> |
     <a href="/applicants">Applicants</a> |
-    <a href="applications">Applications</a> |
-    <a href="companies">Companies</a> |
-    <a href="positionscompanyrecruiters">Positions & Company Recruiters</a></p>
+    <a href="/applications">Applications</a> |
+    <a href="/companies">Companies</a> |
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
 
     <!-- BROWSE -->
     <div id='browse'>
