--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
     <h1>DreamOffer</h1>
 
     <span>Home</span> |
-    <a href="applicants">Applicants</a> |
-    <a href="applications_crud.html">Applications</a> |
-    <a href="companies">Companies</a> |
-    <a href="positionscompanyrecruiters_crud.html">Positions & Company Recruiters</a>
+    <a href="/applicants">Applicants</a> |
+    <a href="/applications">Applications</a> |
+    <a href="/companies">Companies</a> |
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a>
 
     <h2>Every offer starts as a dream.</h2>
 
