Updated Result column to show text

--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -78,10 +78,21 @@
                             Delete
                         </a>
                     </td>
-                {% for key in item.keys() %}
 
-                    <!-- Create a <td> element with the value of that key in it -->
-                    <td> {{item[key]}} </td> 
+                <!-- Create a <td> element with the value of that key in it -->
+                {% for key in item.keys() %}
+                    {% if key == "result" %}
+                        {% if item[key] == 0 %}
+                            <td>"Submitted"</td>
+                        {% elif item[key] == 1 %}
+                            <td>"In Process"</td>
+                        {% elif item[key] == 2 %}
+                            <td>"Offer"</td>
+                        {% elif item[key] == 3 %}
+                            <td>"Rejection"</td>
+                    {% else %}
+                        <td> {{item[key]}} </td> 
+                    {% endif %}
                 {% endfor %}
                 </tr>
             {% endfor %}
