Updated functionality of Results column to show text

--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -80,9 +80,20 @@
                     </td>
 
                 {% for key in item.keys() %}
-
-                    <!-- Create a <td> element with the value of that key in it -->
-                    <td> {{item[key]}} </td> 
+                    {% if key == result %}
+                        {% if item[key] == 0 %}
+                            <td>Submitted</td>
+                        {% elif item[key] == 1 %}
+                            <td>In Process</td>
+                        {% elif item[key] == 2 %}
+                            <td>Offer</td>
+                        {% elif item[key] == 3 %}
+                            <td>Rejection</td>
+                        {% endif %}
+                    {% else %}
+                        <!-- Create a <td> element with the value of that key in it -->
+                        <td> {{item[key]}} </td> 
+                    {% endif %}
                 {% endfor %}
                 </tr>
             {% endfor %}
