Added delete_application file

--- a/templates/delete_application.j2
+++ b/templates/delete_application.j2
@@ -22,17 +22,19 @@
                 <p>Are you sure you want to delete the application?</p>
                 <div>
                 <label><strong>ID: </strong><span>{{data[0].applicationID}}</span></label>
-                <label><strong>Name: </strong><span>{{data[0].name}}</span></label>
+                <label><strong>Name: </strong><span>{{data[0].Applicants.name}}</span></label>
+                <label><strong>Position: </strong><span>{{data[0].Positions.title}}</span></label>
+                <label><strong>Company: </strong><span>{{data[0].Company.name}}</span></label>
                 </div>
             </fieldset>
             <input 
                 type="submit" 
-                value="Delete Applicant" 
-                name="Delete_Applicant" 
+                value="Delete Application" 
+                name="Delete_Application" 
                 class="btn btn-primary" 
                 style="margin:.5rem;"
             />
-            <a href='/applicants'>
+            <a href='/applications'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
