add aliases for attributes

--- a/templates/delete_application.j2
+++ b/templates/delete_application.j2
@@ -22,9 +22,9 @@
                 <p>Are you sure you want to delete the application?</p>
                 <div>
                 <label><strong>ID: </strong><span>{{data[0].applicationID}}</span></label>
-                <label><strong>Name: </strong><span>{{data[0].Applicants.name}}</span></label>
-                <label><strong>Position: </strong><span>{{data[0].Positions.title}}</span></label>
-                <label><strong>Company: </strong><span>{{data[0].Company.name}}</span></label>
+                <label><strong>Name: </strong><span>{{data[0].applicantName}}</span></label>
+                <label><strong>Position: </strong><span>{{data[0].positionTitle}}</span></label>
+                <label><strong>Company: </strong><span>{{data[0].companyName}}</span></label>
                 </div>
             </fieldset>
             <input 
