--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -87,7 +87,7 @@
                     <!-- Create a <td> element with the value of that key in it -->
                     <td> {{item[key]}} </td> 
                 {% endfor %}
-                    <td><a href="applications">Applications</a></td>
+                    <td><a href="/search-applications/{{item.applicantID}}">Applications</a></td>
                 </tr>
             {% endfor %}
             </tbody>
