--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -108,7 +108,7 @@
     <!-- SEARCH -->
     <div id='search'>
         <!-- form to SEARCH Applications for an Application -->
-        <form id="searchApplication" action="/search-application/{{data[0].applicantID}}" method="get">
+        <form id="searchApplication" action="/search-applications/{{data[0].applicantID}}" method="get">
             <legend><strong>Search Applications</strong></legend>
             <fieldset>
                 
