add insert forms for entities

--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -195,5 +195,26 @@
         </table>
         <p>&nbsp;</p>
     </div>
+
+    <!-- Add Position Form -->
+    <div id='insert-pos'>
+        <!-- form to INSERT new Position into Positions entity -->
+        <form id="insertPosition" action="/positionscompanyrecruiters" method="post">
+        </form>
+    </div>
+
+    <!-- Add Position & Recruiter Affiliation Form -->
+    <div id='insert-aff'>
+        <!-- form to INSERT new Position & Recruiter Affiliation -->
+        <form id="insertAffiliation" action="/positionscompanyrecruiters" method="post">
+        </form>
+    </div>
+
+    <!-- Add Recruiter Form -->
+    <div id='insert-rec'>
+        <!-- form to INSERT new Recruiter into Recruiters entity -->
+        <form id="insertRecruiter" action="/positionscompanyrecruiters" method="post">
+        </form>
+    </div>
 </body>
 </html>
